--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>ROCK PAPER SCISSORS</title>
 </head>
 <body>
+
+    <button id="btn">click me</button>
     
     <script src="app.js"></script>
 </body>
