--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
     <button id="btn">click me</button>
     
-    <script src="app.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
