buttons to player move

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-    <button id="btn">click me</button>
+    <button id="r">ROCK</button>
+    <button id="p">PAPER</button>
+    <button id="s">SCISSOR</button>
     
     <script src="main.js"></script>
 </body>
