--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+    <span class="userscore">0</span>
+    <span class="computerscore">0</span>
+    <span class="message"></span>
     <button id="r">ROCK</button>
     <button id="p">PAPER</button>
     <button id="s">SCISSOR</button>
