--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>ROCK PAPER SCISSORS</title>
 </head>
 <body>
+    <div class="flex">
+        <span class="userscore">0</span>
+        <span class="computerscore">0</span>
+    </div>
+   
 
-    <span class="userscore">0</span>
-    <span class="computerscore">0</span>
-    <span class="message"></span>
-    <button id="r">ROCK</button>
-    <button id="p">PAPER</button>
-    <button id="s">SCISSOR</button>
+    <div class="flex">
+        <button id="r">ROCK</button>
+        <button id="p">PAPER</button>
+        <button id="s">SCISSOR</button>
+    </div>
+
     
     <script src="main.js"></script>
 </body>
